Add button-group input.

--- a/BootStrap/bootstrap.html
+++ b/BootStrap/bootstrap.html
@@ -382,3 +382,184 @@
     <input type="radio">JS
   </label>
 </div><br><br>
+
+
+<h4>单按钮下拉菜单</h4>
+<div class="btn-group">
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+    default
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li role="presentation"><a href="#">CSS</a></li>
+    <li role="presentation"><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+<div class="btn-group">
+  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+    primary
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li role="presentation"><a href="#">CSS</a></li>
+    <li role="presentation"><a href="#">JavaScrpt</a></li>
+  </ul>
+</div>
+<div class="btn-group">
+  <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
+    success
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li role="presentation"><a href="#">CSS</a></li>
+    <li role="presentation"><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+<div class="btn-group">
+  <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
+    info
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li role="presentation"><a href="#">CSS</a></li>
+    <li role="presentation"><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+<div class="btn-group">
+  <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
+    warning
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li role="presentation"><a href="#">CSS</a></li>
+    <li role="presentation"><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+<div class="btn-group">
+  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
+    danger
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li role="presentation"><a href="#">CSS</a></li>
+    <li role="presentation"><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+<div style="height:100px"></div>
+
+
+<h4>分裂式按钮下拉菜单</h4>
+<div class="btn-group">
+  <button type="button" class="btn btn-default">默认</button>
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li role="presentation"><a href="#">CSS</a></li>
+    <li role="presentation"><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+<div style="height:100px"></div>
+
+
+<h4>多种尺寸的按钮</h4>
+<div class="btn-group">
+  <button type="button" class="btn btn-lg btn-default drop-toggle" data-toggle="dropdown">
+    大号
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li role="presentation"><a href="#">CSS</a></li>
+    <li role="presentation"><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+<div class="btn-group">
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+    默认
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li role="presentation"><a href="#">CSS</a></li>
+    <li role="presentation"><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+<div class="btn-group">
+  <button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
+    小号
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li class="presentation"><a href="#">CSS</a></li>
+    <li class="presentation"><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+<div class="btn-group">
+  <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">
+    更小
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li role="presentation"><a href="#">CSS</a></li>
+    <li role="presentation"><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+<div style="height:100px"></div>
+
+
+<h4>向上弹出式菜单（dropup 使弹出菜单向上）</h4>
+<div style="height:100px"></div>
+<div class="btn-group dropup">
+  <button type="button" class="btn btn-default dropdown-toggle" id="dropdownMenu" data-toggle="dropdown">
+    defalut
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">HTML</a></li>
+    <li class="presentation"><a href="#">CSS</a></li>
+    <li class="presentation"><a href="#">JavaScript</a></li>
+  </ul>
+</div>
+<br><br>
+
+<h4>输入框-基本组合</h4>
+<style>
+  div{
+    margin:5px;
+  }
+</style>
+<div class="input-group">
+  <span class="input-group-addon" id="basic-addon">@</span>
+  <input type="text" class="form-control" placeholder="用户名" aria-describedby="basic-addon">
+</div>
+<div class="input-group">
+  <input type="text" class="form-control" placeholder="邮箱" aria-describedby="basic-addon">
+  <span class="input-group-addon" id="basic-addon">@google.com</span>
+</div>
+<div class="input-group">
+  <span class="input-group-addon">$</span>
+  <input type="text" class="form-control" placeholder="金额" aria-label="Amount(to the nearest dollar)">
+  <span class="input-group-addon">.00</span>
+</div>
+
+<h4>输入框-尺寸</h4>
+<style>
+  div{
+    margin:5px;
+  }
+</style>
+<div class="input-group input-group-lg">
+  <span class="input-group-addon" id="basic-addon">@</span>
+  <input type="text" class="form-control" placeholder="用户名" aria-describedby="basic-addon">
+</div>
+<div class="">
