--- a/BootStrap/bootstrap.html
+++ b/BootStrap/bootstrap.html
@@ -562,4 +562,11 @@
   <span class="input-group-addon" id="basic-addon">@</span>
   <input type="text" class="form-control" placeholder="用户名" aria-describedby="basic-addon">
 </div>
-<div class="">
+<div class="input-group input-group">
+  <span class="input-group-addon" id="basic-addon">@</span>
+  <input type="text" class="form-control" placeholder="用户名" aria-describedby="basic-addon">
+</div>
+<div class="input-group input-group-sm">
+  <span class="input-group-addon" id="basic-addon">@</span>
+  <input type="text" class="form-control" placeholder="用户名" aria-describedby="basic-addon">
+</div>
