Add search button.

--- a/BootStrap/bootstrap.html
+++ b/BootStrap/bootstrap.html
@@ -570,3 +570,51 @@
   <span class="input-group-addon" id="basic-addon">@</span>
   <input type="text" class="form-control" placeholder="用户名" aria-describedby="basic-addon">
 </div>
+
+<h4>复选框和单选框</h4>
+<!-- style -->
+<div class="input-group">
+  <span class="input-group-addon"><input type="checkbox"></span>
+  <input type="text" class="form-control">
+</div>
+<div class="input-group">
+  <span class="input-group-addon"><input type="radio"></span>
+  <input type="text" class="form-control">
+</div>
+
+<h4>搜索</h4>
+<!-- style -->
+<div class="input-group">
+  <span class="input-group-btn"><button class="btn btn-default" type="button">搜索</button></span>
+  <input type="text" class="form-control" placeholder="search">
+</div>
+<div class="input-group">
+  <input type="text" class="form-control" placeholder="search">
+  <span class="input-group-btn"><button class="btn btn-default" type="button">搜索</button></span>
+</div>
+
+<h4>搜索按钮整合下拉菜单</h4>
+<!-- style -->
+<div class="input-group">
+  <div class="input-group-btn">
+    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">搜索<span class="caret"></span></button>
+    <ul class="dropdown-menu" role="menu">
+      <li><a href="#">Google</a></li>
+      <li class="divider">
+      <li><a href="#">百度</a></li>
+    </ul>
+  </div>
+  <input type="text" class="form-control">
+</div>
+<div class="input-group">
+  <input type="text" class="form-control">
+  <div class="input-group-btn">
+    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">搜索<span class="caret"></span></button>
+    <ul class="dropdown-menu dropdon-menu-right" role="menu">
+      <li><a href="#">Google</a></li>
+      <li class="divider">
+      <li><a href="#">百度</a></li>
+    </ul>
+  </div>
+</div>
+<div style="height:120px"></div>
