--- a/BootStrap/bootstrap.html
+++ b/BootStrap/bootstrap.html
@@ -797,3 +797,41 @@
     <div class="col-xs-3">
       <a href="#" class="thumbnail"><img src="pictures/cat.jpg"></a>
     </div>
+    <div class="col-xs-3">
+      <a href="#" class="thumbnail"><img src="pictures/car.jpg"></a>
+    </div>
+    <div class="col-xs-3">
+      <a href="#" class="thumbnail"><img src="pictures/doraemon.jpg"></a>
+    </div>
+  </div>
+</div><br>
+
+<h4>自定义内容</h4>
+<style>
+  img{
+    width:150px;
+  }
+  div.col-xs-3{
+    text-align:center;
+  }
+</style>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-3">
+      <a href="#" class="thumbnail"><img src="pictures/car.jpg"></a>
+      <div class="caption">
+        <div class="text-muted">车</div><br>
+        <p><a href="#" class="btn btn-primary" role="button">选中</a></p>
+      </div>
+    </div>
+    <div class="col-xs-3">
+      <a href="#" class="thumbnail"><img src="pictures/cat.jpg"></a>
+      <div class="caption">
+        <div class="text-muted">猫</div><br>
+        <p><a href="#" class="btn btn-primary" role="button">选中</a></p>
+      </div>
+    </div>
+    <div class="col-xs-3">
+      <a href="#" class="thumbnail"><img src="pictures/doraemon.jpg"></a>
+      <div class="caption">
+        <div class="tex">
