--- a/BootStrap/bootstrap.html
+++ b/BootStrap/bootstrap.html
@@ -834,4 +834,45 @@
     <div class="col-xs-3">
       <a href="#" class="thumbnail"><img src="pictures/doraemon.jpg"></a>
       <div class="caption">
-        <div class="tex">
+        <div class="text-muted">蓝胖子</div><br>
+        <p><a href="#" class="btn btn-primary" role="button">选中</a></p>
+      </div>
+    </div>
+  </div>
+</div><br><br>
+
+<h4>警告框</h4>
+<div class="alert alert-success" role="alert">操作成功</div>
+<div class="alert alert-info" role="alert">信息提示</div>
+<div class="alert alert-warning" role="alert">警告提示</div>
+<div class="alert alert-danger" role="alert">危险提示</div><br>
+
+<h4>可关闭的警告框</h4>
+<div class="alert alert-warning alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>警告提示
+</div><br>
+
+<h4>警告框中的链接</h4>
+<div class="alert alert-success" role="alert">
+  <span>sale!!!</span><a href="#nowhere" class="alert-link">点击购买</a>
+</div>
+<div class="alert alert-info" role="alert">
+  <span>sale!!!</span><a href="#nowhere" class="alert-link">点击购买</a>
+</div>
+<div class="alert alert-warning" role="alert">
+  <span>sale!!!</span><a href="#nowhere" class="alert-link">点击购买</a>
+</div>
+<div class="alert alert-danger" role="alert">
+  <span>sale!!!</span><a href="#nowhere" class="alert-link">点击购买</a>
+</div><br><br>
+
+<h4>基本进度条</h4>
+<div class="progress">
+  <div class="progress-bar" style="width:60%;"></div>
+</div><br>
+
+<h4>带数值的进度条</h4>
+<div class="progress">
+  <div class="progress-bar" style="width:60%;min">
