Add progress ul and panel.

--- a/BootStrap/bootstrap.html
+++ b/BootStrap/bootstrap.html
@@ -875,4 +875,113 @@
 
 <h4>带数值的进度条</h4>
 <div class="progress">
-  <div class="progress-bar" style="width:60%;min">
+  <div class="progress-bar" style="width:60%;min-width:2em;">60%</div>
+</div>
+<div class="progress">
+  <div class="progress-bar" style="width:0%;min-width:2em;">0%</div>
+</div><br>
+
+<h4>不同颜色的进度条</h4>
+<div class="progress">
+  <div class="progress-bar progress-bar-success" style="width:40%">40%</div>
+</div>
+<div class="progress">
+  <div class="progress-bar progress-bar-info" style="width:60%">60%</div>
+</div>
+<div class="progress">
+  <div class="progress-bar progress-bar-warning" style="width:80%">80%</div>
+</div>
+<div class="progress">
+  <div class="progress-bar progress-bar-danger" style="width:100%">100%</div>
+</div><br>
+
+<h4>条纹</h4>
+<div class="progress">
+  <div class="progress-bar progress-bar-success progress-bar-striped" style="width:40%">40%</div>
+</div><br>
+
+<h4>发廊</h4>
+<div class="progress">
+  <div class="progress-bar progress-bar-striped active" style="width:40%">40%</div>
+</div><br>
+
+<h4>堆叠</h4>
+<div class="progress">
+  <div class="progress-bar progress-bar-success" style="width:30%"></div>
+  <div class="progress-bar progress-bar-warning progress-bar-striped" style="width:20%"></div>
+  <div class="progress-bar progress-bar-danger" style="width:10%"></div>
+</div><br><br>
+
+<h4>基本列表</h4>
+<ul class="list-group">
+  <li class="list-group-item">HTML</li>
+  <li class="list-group-item">CSS</li>
+  <li class="list-group-item">JavaScript</li>
+</ul><br>
+
+<h4>徽记</h4>
+<ul class="list-group">
+  <li class="list-group-item"><span class="badge">3</span>HTML</li>
+  <li class="list-group-item"><span class="badge">33</span>CSS</li>
+  <li class="list-group-item"><span class="badge">333</span>JavaScript</li>
+</ul><br>
+
+<h4>超链接</h4>
+<div class="list-group">
+  <a href="#" class="list-group-item active">HTML</a>
+  <a href="#" class="list-group-item">CSS</a>
+  <a href="#" class="list-group-item">JavaScript</a>
+</div><br>
+
+<h4>按钮</h4>
+<div class="list-group">
+  <button type="button" class="list-group-item active">HTML</button>
+  <button type="button" class="list-group-item">CSS</button>
+  <button type="button" class="list-group-item">JavaScript</button>
+</div><br>
+
+<h4>颜色</h4>
+<div class="list-group">
+  <a href="#" class="list-group-item list-group-item-success">HTML</a>
+  <a href="#" class="list-group-item list-group-item-info">CSS</a>
+  <a href="#" class="list-group-item list-group-item-warning">JavaScript</a>
+</div><br><br>
+
+<h4>基本面板</h4>
+<div class="panel panel-default">
+  <div class="panel-body">面板内容</div>
+</div><br>
+
+<h4>面板标题和内容</h4>
+<div class="panel panel-default">
+  <div class="panel-heading">面板标题</div>
+  <div class="panel-body">面板内容</div>
+</div><br>
+
+<h4>面板脚注</h4>
+<div class="panel panel-default">
+  <div class="panel-body">面板内容</div>
+  <div class="panel-footer">面板脚注</div>
+</div><br>
+
+<h4>面板颜色</h4>
+<div class="panel panel-default">
+  <div class="panel-heading">面板标题</div>
+  <div class="panel-body">面板内容</div>
+</div>
+<div class="panel panel-success">
+  <div class="panel-heading">面板标题</div>
+  <div class="panel-body">面板内容</div>
+</div>
+<div class="panel panel-info">
+  <div class="panel-heading">面板标题</div>
+  <div class="panel-body">面板内容</div>
+</div>
+<div class="panel panel-warning">
+  <div class="panel-heading">面板标题</div>
+  <div class="panel-body">面板内容</div>
+</div>
+<div class="panel panel-danger">
+  <div class="panel-heading">面板标题</div>
+  <div class="panel-body">面板内容</div>
+</div><br><br>
