--- a/BootStrap/bootstrap.html
+++ b/BootStrap/bootstrap.html
@@ -809,6 +809,7 @@
   </div>
 </div><br>
 
+
 <h4>自定义内容--container</h4>
 <style>
   img{
@@ -1022,3 +1023,23 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div style="text-align:center">版权所有</div>
 </nav><br><br>
+
+<h4>静态模拟窗口--modal-dialog</h4>
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <button data-dismiss="modal" class="close" type="button"><span aria-hidden="true">X</span><span class="sr-only">Close</span></button>
+      <h4 class="modal-title">提问</h4>
+    </div>
+    <div class="modal-body">
+      <p>问题描述</p>
+      <textarea class="form-control"></textarea>
+    </div>
+    <div class="modal-footer">
+      <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
+      <button class="btn btn-primary" type="button">提交</button>
+    </div>
+  </div>
+</div><br>
+
+<h4>点击弹出</h4>
