--- a/BootStrap/bootstrap.html
+++ b/BootStrap/bootstrap.html
@@ -1042,4 +1042,132 @@
   </div>
 </div><br>
 
-<h4>点击弹出</h4>
+<h4>点击弹出--class="modal fade"</h4>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal0">提问（点击弹出模态窗口）</button>
+<div class="modal fade" id="myModal0" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button data-dismiss="modal" class="close" type="button">
+          <span aria-hidden="true">X</span><span class="sr-only">Close</span>
+        </button>
+        <h4 class="modal-title">提问</h4>
+      </div>
+      <div class="modal-body">
+        <p>问题描述</p><textarea class="form-control"></textarea>
+      </div>
+      <div class="modal-footer">
+        <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
+        <button class="btn btn-primary" type="button">提交</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div style="height:200px"></div><br>
+
+<h4>不要动画效果--class="modal"</h4>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal1">提问（点击弹出模态窗口）</button>
+<div class="modal" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModelLabel">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button data-dismiss="modal" class="close" type="button">
+          <span aria-hidden="true">X</span><span class="sr-only">Close</span>
+        </button>
+        <h4 class="modal-title">提问</h4>
+      </div>
+      <div class="modal-body">
+        <p>问题描述</p><textarea class="form-control"></textarea>
+      </div>
+      <div class="modal-footer">
+        <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
+        <button class="btn btn-primary" type="button">提交</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div style="height:200px"></div><br>
+
+<h4>点击空白不会收起--data-backdrop="static"</h4>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal2">提问（点击弹出模态窗口）</button>
+<div class="modal fade" id="myModal2" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModelLabel">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button data-dismiss="modal" class="close" type="button">
+          <span aria-hidden="true">X</span><span class="sr-only">Close</span>
+        </button>
+        <h4 class="modal-title">提问</h4>
+      </div>
+      <div class="modal-body">
+        <p>问题描述</p><textarea class="form-control"></textarea>
+      </div>
+      <div class="modal-footer">
+        <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
+        <button class="btn btn-primary" type="button">提交</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div style="height:200px"></div><br>
+
+<script>
+  $(function(){
+    $("#open").click(function(){
+      $("#myModal3").modal('show');
+    });
+    $("#submit").click(function(){
+      alert("信息已经提交");
+      $("#myModal3").modal('hide');
+    });
+    $("#toggle").click(function(){
+      $("#myModal3").modal('toggle');
+    });
+});
+</script>
+<button class="btn btn-default" id="open">打开模态窗口</button>
+<button class="btn btn-default" id="close">关闭模态窗口</button>
+<button class="btn btn-default" id="toggle">切换模态窗口</button>
+<div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button data-dismiss="modal" class="close" type="button">
+          <span aria-hidden="true">X</span><span class="sr-only">Close</span>
+        </button>
+        <h4 class="modal-title">提问</h4>
+      </div>
+      <div class="modal-body">
+        <p>问题描述</p>
+        <textarea class="form-control"></textarea>
+      </div>
+      <div class="modal-footer">
+        <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
+        <button class="btn btn-primary" id="submit" type="button">提交</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div style="height:200px"></div><br>
+
+<h4>监听模态的变化</h4>
+<script>
+  $(function(){
+    $("#myModal4").on("show.bs.modal",function(){
+      alert("开始显示模态窗口");
+    });
+    $("#myModal4").on("shown.bs.modal",function(){
+      alert("显示模态窗口完毕");
+    });
+    $("#myModal4").on("hide.bs.modal",function(){
+      alert("开始隐藏模态窗口");
+    });
+    $("#myModal4").on("hidden.bs.modal",function(){
+      alert("隐藏模态窗口完毕");
+    });
+  });
+</script>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal4">提问（点击弹出模态窗口）</button>
+<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModelLabel">
+  <div class="modal-dialog">
+    <div class="modal-">
